migration to Supabase + adding registration/login

--- a/lab1/package.json
+++ b/lab1/package.json
@@ -10,11 +10,12 @@
   "keywords": [],
   "author": "Krystian",
   "license": "ISC",
-  "type": "module",
   "engines": {
     "node": ">=18"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.89.0",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0"
   },
   "devDependencies": {
