--- a/lab1/tasks.json
+++ b/lab1/tasks.json
@@ -1,1 +1,9 @@
-[]
+[
+  {
+    "id": 2,
+    "title": "Test",
+    "description": "Opis",
+    "completed": false,
+    "createdAt": "2025-11-15T17:46:12.886Z"
+  }
+]
