--- a/lab1/package.json
+++ b/lab1/package.json
@@ -14,9 +14,12 @@
     "node": ">=18"
   },
   "dependencies": {
+    "@sentry/node": "^10.32.1",
     "@supabase/supabase-js": "^2.89.0",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
