--- a/lab1/package.json
+++ b/lab1/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@sentry/node": "^10.32.1",
     "@supabase/supabase-js": "^2.89.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
